@@ -73,19 +73,6 @@
   <a href="../devel/packaging.html">packaging LilyPond</a>.
 </p>
 
-<a name="redhat-notes"></a>
-
-The easiest way to get Ghostscript 8.x on a Fedora box, is to do as
-root
-
-<pre>
-  sudo yum install rpm-build
-  rpmbuild --rebuild ftp://dl.xs4all.nl/pub/mirror/fedora/development/SRPMS/ghostscript-8.15.1-1.src.rpm
-  rpm -U /usr/src/redhat/RPMS/i386/ghostscript*8.15.1* 
-</pre>
-
-<a name="mandrake-notes"></a>
-
 All logos and product images are copyright and trademark acknowledged.
 
 <p>
